--- a/src/WebSocketMain.mxml
+++ b/src/WebSocketMain.mxml
@@ -90,12 +90,95 @@
 			{
 				callerUrl = "http://localhost:8124/WebSocketMain.html";
 				socket = create('ws://192.168.0.3:8124/socket.io/flashsocket', null);
-				
+				socket.addEventListener("event", onData);
 			}
 
+			protected var frame:String = '~m~';
+			
+			protected function onData(e:*):void{
+				var event:Object = (e.target as WebSocket).receiveEvents();
+				var data:Object = event[0];
+				
+				if ( data.type == "message" ){
+					this._setTimeout();
+					var msgs:Array = this._decode(data.data);
+					if (msgs && msgs.length){
+						for (var i:int = 0, l:int = msgs.length; i < l; i++){
+							this._onMessage(msgs[i]);
+						}
+					}
+				}
+			}
+			private function _setTimeout():void{
+				
+			}
+			public var sessionid:String;
+			public var connected:Boolean;
+			public var connecting:Boolean;
+			
+			private function _onMessage(message:String):void{
+				if (!this.sessionid){
+					this.sessionid = message;
+					this._onConnect();
+				} else if (message.substr(0, 3) == '~h~'){
+					this._onHeartbeat(message.substr(3));
+				} else if (message.substr(0, 3) == '~j~'){
+					//this.base._onMessage(JSON.parse(message.substr(3)));
+				} else {
+					//this.emit('message', message);
+				}
+			}
+			private function _decode(data:String):Array{
+				var messages:Array = [], number:*, n:*;
+				do {
+					if (data.substr(0, 3) !== frame) return messages;
+					data = data.substr(3);
+					number = '', n = '';
+					for (var i:int = 0, l:int = data.length; i < l; i++){
+						n = Number(data.substr(i, 1));
+						if (data.substr(i, 1) == n){
+							number += n;
+						} else {	
+							data = data.substr(number.length + frame.length);
+							number = Number(number);
+							break;
+						} 
+					}
+					messages.push(data.substr(0, number)); // here
+					data = data.substr(number);
+				} while(data !== '');
+				return messages;
+			}
+			
+			private function _onHeartbeat(heartbeat:*):void{
+				var enc:String = '~h~' + heartbeat;
+				send( enc ); // echo
+			};
+			
+			private function send(msg:String):void{
+				socket.send(_encode(msg));
+			}
+			
+			private function _onConnect():void{
+				this.connected = true;
+				this.connecting = false;
+				//this.base._onConnect();
+				//this._setTimeout();
+			};
+			
+			private function _encode(messages:*):String{
+				var ret = '', message,
+					messages =  (messages is Array) ? messages : [messages];
+				for (var i = 0, l = messages.length; i < l; i++){
+					message = messages[i] === null || messages[i] === undefined ? '' : (messages[i].toString());
+					ret += frame + message.length + frame + message;
+				}
+				return ret;
+			};
+			
 		]]>
 	</fx:Script>
 	
 	<s:TextInput id="text" />
-	<s:Button label="send" click="socket.send(text.text)" />
+	<s:Button label="send" click="send(text.text)" />
 </s:Application>
